<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:background="#00FAEAB1"
        android:textSize="25sp"
        android:layout_marginStart="20dp"
        android:text="@string/name"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/textViewBirthYearLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#03A9F4"
        android:textSize="20sp"
        android:text="@string/birth_year"
        android:textStyle="bold"
        android:layout_below="@+id/textViewName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/textViewBirthYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#03A9F4"
        android:textSize="20sp"
        android:text="@string/birth_year2"
        android:layout_below="@+id/textViewBirthYearLabel"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textViewGenderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#03A9F4"
        android:textSize="20sp"
        android:text="@string/gender"
        android:textStyle="bold"
        android:layout_below="@+id/textViewBirthYear"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/textViewGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#03A9F4"
        android:textSize="20sp"
        android:text="@string/gender2"
        android:layout_below="@+id/textViewGenderLabel"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textViewHairColorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#03A9F4"
        android:textSize="20sp"
        android:text="@string/hair_color"
        android:textStyle="bold"
        android:layout_below="@id/textViewGender"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textViewHairColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#03A9F4"
        android:textSize="20sp"
        android:text="@string/gender3"
        android:layout_below="@+id/textViewHairColorLabel"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textViewEyeColorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#03A9F4"
        android:textSize="20sp"
        android:text="@string/eye_color"
        android:textStyle="bold"
        android:layout_below="@+id/textViewHairColor"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/textViewEyeColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#03A9F4"
        android:text="@string/eye_color2"
        android:layout_below="@+id/textViewEyeColorLabel"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textViewHeightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#03A9F4"
        android:textSize="20sp"
        android:text="@string/height"
        android:textStyle="bold"
        android:layout_below="@+id/textViewEyeColor"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/textViewHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#03A9F4"
        android:text="@string/height2"
        android:layout_below="@+id/textViewHeightLabel"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textViewMassLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#03A9F4"
        android:textSize="20sp"
        android:text="@string/mass"
        android:textStyle="bold"
        android:layout_below="@+id/textViewHeight"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/textViewMass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#03A9F4"
        android:text="@string/mass2"
        android:layout_below="@+id/textViewMassLabel"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/textViewSkinColorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#03A9F4"
        android:textSize="20sp"
        android:text="@string/skin_color"
        android:textStyle="bold"
        android:layout_below="@+id/textViewMass"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/textViewSkinColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#03A9F4"
        android:text="@string/skin_color2"
        android:layout_below="@+id/textViewSkinColorLabel"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>
