<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout_Films"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/slider_bkg"
    tools:context=".FilmsFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/films"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/filmsSearchEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="30dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/title_of_movie"
        android:background="@color/transparent_blue"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:autofillHints="Title of movie" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recViewFilms"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="30dp"
        android:paddingTop="170dp"
        android:paddingBottom="20dp"
        android:scrollbars="vertical"
        android:visibility="visible"
        android:background="#00FFFFFF"
        tools:layout_editor_absoluteX="30dp"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="#00FFFFFF"
        android:backgroundTintMode="screen"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="@+id/filmsSearchEditText"
        app:layout_constraintTop_toBottomOf="@+id/filmsSearchEditText" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="#00FFFFFF"
        android:backgroundTintMode="screen"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.341"
        app:layout_constraintStart_toStartOf="@+id/filmsSearchEditText"
        app:layout_constraintTop_toBottomOf="@+id/filmsSearchEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>