<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout_People"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/slider_bkg"
    android:gravity="center"
    tools:context=".PeopleFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/peoples"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/peopleSearchEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="30dp"
        android:background="@color/transparent_blue"
        android:ems="10"
        android:hint="@string/person_s_name"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:autofillHints="@string/person_s_name" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recViewPeople"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="30dp"
        android:paddingTop="170dp"
        android:paddingBottom="20dp"
        android:scrollbars="vertical"
        android:visibility="visible"
        tools:itemCount="20"
        tools:layout_editor_absoluteX="30dp"
        tools:visibility="visible" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="#00FFFFFF"
        android:backgroundTintMode="screen"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="@+id/peopleSearchEditText"
        app:layout_constraintTop_toBottomOf="@+id/peopleSearchEditText" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="#00FFFFFF"
        android:backgroundTintMode="screen"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.341"
        app:layout_constraintStart_toStartOf="@+id/peopleSearchEditText"
        app:layout_constraintTop_toBottomOf="@+id/peopleSearchEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>